# Zenoh-Boss-Worker

./: .dockerignore  .env.example  .gitignore  README.md
python/: pyproject.toml
python/src/bw/common/: log.py
python/src/bw/messaging/: rabbitmq.py  zenoh.py
python/src/bw/services/assignment/: handler.py  main.py  publisher.py  solver.py
python/src/bw/services/consumer/: main.py
python/src/bw/services/orchestrator/: batch_runner.py  config.py  coordinator.py  executor.py  handler.py  main.py  processor.py  result_dispatcher.py
python/src/bw/services/producer/: main.py
python/src/bw/services/worker/: main.py
python/src/rbw/messaging/: rabbitmq.py  zenoh.py
python/src/rbw/services/consumer/: main.py
python/src/rbw/services/orchestrator/: main.py
python/src/rbw/services/producer/: main.py
python/src/rbw/services/worker/: main.py
python/tests/: test_assignment_handler.py  test_orchestrator_scenarios.py
python/tests/assignment/: test_assignment_golden_cases.py  test_assignment_solver.py
python/tests/orchestrator/: test_orchestrator_scenarios.py
rust/: Cargo.toml  build.rs
rust/bw-core/: Cargo.toml  build.rs
rust/bw-core/src/: config.rs  lib.rs  proto.rs
rust/rbw-core/: Cargo.toml  build.rs
rust/services/assignment/: Cargo.toml
rust/services/assignment/src/: handler.rs  main.rs  solver.rs
rust/services/assignment/tests/: golden_cases.rs
rust/services/orchestrator/: Cargo.toml
rust/services/orchestrator/src/: config.rs  main.rs
rust/services/worker/: Cargo.toml
rust/services/worker/src/: main.rs
rust/src/: config.rs  logging.rs  proto.rs  rabbitmq.rs
(+44 files in other folders)
