[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bw"
version = "0.1.0"
description = "Python services for the BW messaging and workflow testbed"
requires-python = ">=3.11"
dependencies = [
  "pika==1.3.2",
  "eclipse-zenoh==1.0.0",
  "protobuf>=7.0.0",
  "numpy",
  "scipy",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["python/src"]
testpaths = ["python/tests"]
addopts = "-v"