[package]
name = "rbw-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
prost = "0.13"
prost-types = "0.13"
lapin = "2.5"
tokio = { version = "1", features = ["full"] }
zenoh = "1"
hostname = "0.4"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"

[build-dependencies]
prost-build = "0.13"